--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-beautifulsoup4==4.5.1
-html5lib==0.999999999
-jieba==0.38
-requests==2.12.4
-scikit-learn==0.18
-scipy==0.18.1
+jieba
+beautifulsoup4==
+html5lib==
+jieba==
+requests==
+scikit-learn==
+scipy==
